--- a/src/main/resources/templates/footer-items.html
+++ b/src/main/resources/templates/footer-items.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" th:src="@{/javascript/devs-util.js}"></script>
 	<script type="text/javascript" th:src="@{/javascript/parallax.js}"></script>
 	<script type="text/javascript" th:src="@{/javascript/actors.controller.js}"></script>
-    <script type="text/javascript" th:src="@{/javascript/actors.controller.js}"></script>
 	<script type="text/javascript" th:src="@{/javascript/formcontroller.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/new-actor-controller.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/edit-actor-controller.js}"></script>
 </div>
