--- a/src/main/resources/templates/actors/newactor.html
+++ b/src/main/resources/templates/actors/newactor.html
@@ -21,12 +21,12 @@
                         <div class="col-9 w-100 pull-right">
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">First and Last Name</label>
-                                <input type="text" class="form-control col-6" id="recipient-name"></input>
+                                <input type="text" placeholder="ie. John Smith" class="form-control col-6" id="recipient-name"></input>
                             </div>
                             <div class="form-group row">
                                 <div class="col-3">
                                     <label for="actor-height" class="col-form-label">Height</label>
-                                    <input type="text"  class="form-control col-12" id="actor-height"></input>
+                                    <input type="text" placeholder="ie. 5' 11&quot;"  class="form-control col-12" id="actor-height"></input>
                                 </div>
                                 <div class="col-3">
                                     <label for="actor-hair" class="col-form-label">Hair Color</label>
@@ -42,21 +42,9 @@
                                 <textarea class="form-control" id="description"></textarea>
                             </div>
                             <div class="form-group row">
-                                <div class="col-3">
-                                    <label for="trait1" class="col-form-label">Trait 1</label>
-                                    <input type="text" class="form-control col-md-12" id="trait1"></input>
-                                </div>
-                                <div class="col-3">
-                                    <label for="trait2" class="col-form-label">Trait 2</label>
-                                    <input type="text" class="form-control col-md-12" id="trait2"></input>
-                                </div>
-                                <div class="col-3">
-                                    <label for="trait3" class="col-form-label">Trait 3</label>
-                                    <input type="text" class="form-control col-md-12" id="trait3"></input>
-                                </div>
-                                <div class="col-3">
-                                    <label for="trait4" class="col-form-label">Trait 4</label>
-                                    <input type="text" class="form-control col-md-12" id="trait4"></input>
+                                <div class="col-12">
+                                    <label for="trait1" class="col-form-label">Traits (4 Max, Seperate by comma.)</label>
+                                    <input type="text" placeholder="ie. funny, outgoing" class="form-control col-md-12" id="traits"></input>
                                 </div>
                             </div>
                         </div>
