--- a/src/main/resources/templates/actors/actors.html
+++ b/src/main/resources/templates/actors/actors.html
@@ -64,6 +64,7 @@
                                     <li class="list-inline-item">Hair:&nbsp;<b>{{a.hair}}</b></li>
                                     <li class="list-inline-item">Eyes:&nbsp;<b>{{a.eyes}}</b></li>
                                 </ul>
+                                <p class="inline">{{a.name}}'s On Camera Essence</p>
                                 <span data-ng-repeat="t in a.traits">
                                         <div class="badge badge-secondary">{{t}}</div>
                                 </span>
