update SQL data

--- a/src/main/resources/templates/actors/actors.html
+++ b/src/main/resources/templates/actors/actors.html
@@ -63,10 +63,9 @@
                                 <ul class="list-inline">
                                     <li class="list-inline-item">Hair:&nbsp;<b>{{a.hair}}</b></li>
                                     <li class="list-inline-item">Eyes:&nbsp;<b>{{a.eyes}}</b></li>
-                                </ul>
-                                <p class="inline">{{a.name}}'s On Camera Essence</p>
+                                </ul>                                
                                 <span data-ng-repeat="t in a.traits">
-                                        <div class="badge badge-secondary">{{t}}</div>
+                                        <div class="badge badge-secondary">{{t.description}}</div>
                                 </span>
                             </div>
                             <div class="card-link card-footer">
