--- a/src/main/resources/templates/actors/actorview.html
+++ b/src/main/resources/templates/actors/actorview.html
@@ -17,8 +17,9 @@
                     <li class="list-inline-item">Hair:&nbsp;<b>{{a.hair}}</b></li>
                     <li class="list-inline-item">Eyes:&nbsp;<b>{{a.eyes}}</b></li>
                 </ul>
+                <p>{{a.name}}'s On Camera Essence</p>
                 <span data-ng-repeat="t in a.traits">
-                        <div class="badge badge-secondary">{{t}}</div>
+                        <div class="badge badge-secondary">{{t.description}}</div>
                 </span>
             </div>
             <div class="card-footer w-100 text-muted">
