--- a/src/main/resources/templates/actors/editactor.html
+++ b/src/main/resources/templates/actors/editactor.html
@@ -21,30 +21,30 @@
                         <div class="col-9 w-100 pull-right">
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">First and Last Name</label>
-                                <input type="text" placeholder="{{a.name}}" class="form-control col-6" id="recipient-name"></input>
+                                <input type="text" placeholder="enter name" ng-model="a.name" class="form-control col-6" id="recipient-name"></input>
                             </div>
                             <div class="form-group row">
                                 <div class="col-3">
                                     <label for="actor-height" class="col-form-label">Height</label>
-                                    <input type="text" placeholder="{{a.height}}" class="form-control col-12" id="actor-height"></input>
+                                    <input type="text" ng-model="a.height" class="form-control col-12" id="actor-height"></input>
                                 </div>
                                 <div class="col-3">
                                     <label for="actor-hair" class="col-form-label">Hair Color</label>
-                                    <input type="text" placeholder="{{a.hair}}" class="form-control col-12" id="actor-hair"></input>
+                                    <input type="text" ng-model="a.hair" class="form-control col-12" id="actor-hair"></input>
                                 </div>
                                 <div class="col-3">
                                     <label for="actor-eyes" class="col-form-label">Eye Color</label>
-                                    <input type="text" placeholder="{{a.eyes}}" class="form-control col-12" id="actor-eyes"></input>
+                                    <input type="text" ng-model="a.eyes" class="form-control col-12" id="actor-eyes"></input>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="description" class="col-form-label">Brief Description</label>
-                                <textarea class="form-control" placeholder="{{a.description}}" id="description"></textarea>
+                                <textarea class="form-control" ng-model="a.description" id="description"></textarea>
                             </div>
                             <div class="form-group row">
                                 <div class="col-12">
                                     <label for="trait1" class="col-form-label">Traits</label>
-                                    <input type="text" class="form-control col-md-12" placeholder="" id="trait1"></input>
+                                    <input type="text" ng-model="a.traits" class="form-control col-md-12" placeholder="" id="trait1"></input>
                                 </div>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
             </div>
             <div class="card-footer w-100 text-muted">
                 <button type="button" class="btn btn-danger" ng-click="close()">Close</button>
-                <button type="button" class="btn btn-info pull-right" ng-click="save()">Save</button>
+                <button type="button" class="btn btn-info pull-right" ng-click="save(a)">Save</button>
             </div>
         </div>
 </script>
