--- a/src/main/resources/templates/actors/newactor.html
+++ b/src/main/resources/templates/actors/newactor.html
@@ -26,7 +26,7 @@
                             <div class="form-group row">
                                 <div class="col-3">
                                     <label for="actor-height" class="col-form-label">Height</label>
-                                    <input type="text" placeholder="ie. 5' 11&quot;"  class="form-control col-12" id="actor-height"></input>
+                                    <input type="text" placeholder="ie. 5' 11"  class="form-control col-12" id="actor-height"></input>
                                 </div>
                                 <div class="col-3">
                                     <label for="actor-hair" class="col-form-label">Hair Color</label>
@@ -43,7 +43,7 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-12">
-                                    <label for="trait1" class="col-form-label">Traits (4 Max, Seperate by comma.)</label>
+                                    <label for="trait1" class="col-form-label">Traits (Separate by comma)</label>
                                     <input type="text" placeholder="ie. funny, outgoing" class="form-control col-md-12" id="traits"></input>
                                 </div>
                             </div>
