Edit Actor Controller update

--- a/src/main/resources/templates/actors/editactor.html
+++ b/src/main/resources/templates/actors/editactor.html
@@ -44,7 +44,7 @@
                             <div class="form-group row">
                                 <div class="col-12">
                                     <label for="trait1" class="col-form-label">Traits</label>
-                                    <input type="text" ng-model="a.traits" class="form-control col-md-12" placeholder="" id="trait1"></input>
+                                    <input type="text" ng-model="a.traitstring" class="form-control col-md-12" placeholder="" id="trait1"></input>
                                 </div>
                             </div>
                         </div>
