--- a/src/main/resources/templates/actors/actorview.html
+++ b/src/main/resources/templates/actors/actorview.html
@@ -19,7 +19,7 @@
                 </ul>
                 <p>{{a.name}}'s On Camera Essence</p>
                 <span data-ng-repeat="t in a.traits">
-                        <div class="badge badge-secondary">{{t.description}}</div>
+                        <div class="badge badge-secondary"><h6>{{t.description}}</h6></div>
                 </span>
             </div>
             <div class="card-footer w-100 text-muted">
