--- a/src/main/resources/templates/actors/newactor.html
+++ b/src/main/resources/templates/actors/newactor.html
@@ -21,30 +21,53 @@
                         <div class="col-9 w-100 pull-right">
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">First and Last Name</label>
-                                <input type="text" placeholder="ie. John Smith" class="form-control col-6" id="recipient-name"></input>
+                                <input type="text"  ng-model="a.name" class="form-control col-6" id="recipient-name"></input>
                             </div>
                             <div class="form-group row">
                                 <div class="col-3">
                                     <label for="actor-height" class="col-form-label">Height</label>
-                                    <input type="text" placeholder="ie. 5' 11"  class="form-control col-12" id="actor-height"></input>
+                                    <input type="text" ng-model="a.height" class="form-control col-12" id="actor-height"></input>
                                 </div>
                                 <div class="col-3">
                                     <label for="actor-hair" class="col-form-label">Hair Color</label>
-                                    <input type="text"  class="form-control col-12" id="actor-hair"></input>
+                                    <input type="text" class="form-control col-12" ng-model="a.hair" id="actor-hair"></input>
                                 </div>
                                 <div class="col-3">
                                     <label for="actor-eyes" class="col-form-label">Eye Color</label>
-                                    <input type="text"  class="form-control col-12" id="actor-eyes"></input>
+                                    <input type="text" class="form-control col-12" ng-model="a.eyes" id="actor-eyes"></input>
+                                </div>
+                                <div class="col-3">
+                                    <label for="actor-gender" class="col-form-label">Gender</label>
+                                    <input type="text" ng-model="a.gender" class="form-control col-12" id="actor-gender"></input>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="description" class="col-form-label">Brief Description</label>
-                                <textarea class="form-control" id="description"></textarea>
+                                <textarea class="form-control" ng-model="a.description" id="description"></textarea>
                             </div>
+                            <label for="traits" class="col-form-label">Traits</label>
                             <div class="form-group row">
-                                <div class="col-12">
-                                    <label for="trait1" class="col-form-label">Traits (Separate by comma)</label>
-                                    <input type="text" placeholder="ie. funny, outgoing" class="form-control col-md-12" id="traits"></input>
+                                <div class="col-4">
+                                    <div class="input-group-append">
+                                        <input type="text" placeholder="Add Trait" class="form-control" id="new-trait">
+                                        <a class="input-group-text" id="basic-addon2"><i class="fa fa-plus"></i></a>
+                                        </input>
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <span data-ng-repeat="t in a.traits">
+                                            <div class="badge badge-secondary" style="margin-bottom: 5px;">
+                                                <h6>{{t.description}}
+                                                <button type="button"
+                                                        class="close"
+                                                        ng-model="t.description"
+                                                        ng-click="removetrait()"
+                                                        style="color: #fff; font-size: 1.0rem; padding-left: 5px;">
+                                                        <span aria-disabled="true">&times;</span>
+                                                </button>
+                                                </h6>
+                                            </div>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -53,7 +76,7 @@
             </div>
             <div class="card-footer w-100 text-muted">
                 <button type="button" class="btn btn-danger" ng-click="close()">Close</button>
-                <button type="button" class="btn btn-info pull-right">Add Actor</button>
+                <button type="button" class="btn btn-info pull-right" ng-click="add()">Add Actor</button>
             </div>
         </div>
 </script>
