--- a/src/main/resources/templates/actors/editactor.html
+++ b/src/main/resources/templates/actors/editactor.html
@@ -1,6 +1,6 @@
 <script type="text/ng-template" id="editactor" th:fragment="copy">
     <!-- Modal Header -->
-    <div class="card flex-row flex-wrap" ng-controller="editActor">
+    <div class="card flex-row flex-wrap">
         <div class="card-block-lg px-3 py-3 w-100">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="close()"><span aria-hidden="true">&times;</span></button>
             <h4 class="card-title">Edit Actor</h4>
@@ -60,7 +60,8 @@
                             </div>
                             <div class="col-8">
                                 <span data-ng-repeat="t in a.traits">
-                                        <div class="badge badge-secondary"><h6>{{t.description}}<button type="button" class="close" ng-model="t.description" ng-click="removetrait()" style="color: #fff; font-size: 1.0rem; padding-left: 5px;"><span aria-disabled="true">&times;</span></button>
+                                        <div class="badge badge-secondary" style="margin-bottom: 5px;"><h6>{{t.description}}
+                                            <button type="button" class="close" ng-model="t.description" ng-click="removetrait()" style="color: #fff; font-size: 1.0rem; padding-left: 5px;"><span aria-disabled="true">&times;</span></button>
                                 </h6>
                             </div>
                             </span>
