delete actor controller and updated libraries

--- a/src/main/resources/templates/actors/deleteactor.html
+++ b/src/main/resources/templates/actors/deleteactor.html
@@ -8,6 +8,7 @@
             <div class="card-block px-3 py-3 w-75">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="close()"><span aria-hidden="true">&times;</span></button>
                 <h4 class="card-title">Are you sure you want to delete {{a.name}}?</h4>
+                <h6 class="card-body">This will permanently remove {{a.name}} from the database!</h6>
             </div>
             <div class="card-footer w-100 text-muted">
                 <!-- <p>Optional Text</p> -->
