--- a/src/main/resources/templates/actors/newactor.html
+++ b/src/main/resources/templates/actors/newactor.html
@@ -1,6 +1,6 @@
 <script type="text/ng-template" id="newactor" th:fragment="copy" >
         <!-- Modal Header -->
-        <div class="card flex-row flex-wrap" ng-controller="newActor">
+        <div class="card flex-row flex-wrap">
             <div class="card-block-lg px-3 py-3 w-100">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="close()"><span aria-hidden="true">&times;</span></button>
                 <h4 class="card-title">New Actor</h4>
