--- a/src/main/resources/templates/actors/actors.html
+++ b/src/main/resources/templates/actors/actors.html
@@ -76,7 +76,7 @@
                                     	<i class="fa fa-eye" aria-hidden="true"></i>
                                 </button>
                                 <button type="button" class="btn btn-link btn-lg pull-right" ng-click="deleteActor(a)">
-                                    	<i class="fa fa-trash danger" aria-hidden="true"></i>
+                                    	<i class="fa fa-trash text-danger" aria-hidden="true"></i>
                                 </button>
                                 <button type="button" class="btn btn-link btn-lg pull-right" ng-click="editActor(a)">
                                     	<i class="fa fa-edit" aria-hidden="true"></i>
